# dkml-workflows-prerelease

./: .gitignore  .gitlab-ci.yml  CHANGES.md  DEVELOPING.md  README.md  bump-packages.cmake  bump-version.cmake  code-hygiene.opam  desktop.version.txt  dkml-build-desktop.opam  dkml-build-desktop.opam.template  dkml-component-common-desktop.opam  dkml-component-common-desktop.opam.template  dkml-component-network-desktop.opam  dkml-component-offline-desktop-ci.opam  dkml-component-offline-desktop-full.opam  dkml-component-offline-desktop.opam  dkml-component-staging-desktop-ci.opam  dkml-component-staging-desktop-ci.opam.template  dkml-component-staging-desktop-compile.opam  dkml-component-staging-desktop-compile.opam.template  dkml-component-staging-desktop-full.opam  dkml-component-staging-desktop-full.opam.template  dkml-component-staging-desktop.opam  dkml-component-staging-withdkml.opam  dkml-component-staging-withdkml.opam.template  dkml-workflows.opam  dkml-workflows.opam.template  dune  dune-project
.github/workflows/: ci-pkgs.yml  dune  main.yml  setup-dkml.yml  test-gh.yml  test-pc.yml
.github/workflows/scripts/localdev/: package_win32_msys2.sh  windows_vars.source.sh
.gitlab/: dune  setup-dkml.gitlab-ci.yml
ci/: build-test.sh  prepare-release.sh
ci/setup-dkml/gh-darwin/: action.yml
ci/setup-dkml/gh-darwin/post/: action.yml
ci/setup-dkml/gh-darwin/pre/: action.yml
ci/setup-dkml/gh-linux/: action.yml
ci/setup-dkml/gh-linux/post/: action.yml
ci/setup-dkml/gh-linux/pre/: action.yml
ci/setup-dkml/gh-windows/: action.yml
ci/setup-dkml/gh-windows/post/: action.yml
ci/setup-dkml/gh-windows/pre/: action.yml
ci/setup-dkml/gl/: dune  setup-dkml.gitlab-ci.yml
ci/setup-dkml/pc/: setup-dkml-darwin_x86_64.sh  setup-dkml-linux_x86.sh  setup-dkml-linux_x86_64.sh  setup-dkml-windows_x86.ps1  setup-dkml-windows_x86_64.ps1
src/: arg_common.ml  dune  gh_dkml_action_yml.ml  gh_setup_dkml_action_yml.ml  gh_setup_dkml_yml.ml  gl_setup_dkml_yml.ml  pc_setup_dkml.ml  setup_dkml_scaffold.ml
src/buildtime/: dkml_component_offline_desktop_full.ml  dkml_component_staging_desktop_compile.ml  dune
src/buildtime_installer/: dkml_component_common_desktop.ml  dkml_component_network_desktop.ml  dkml_component_offline_desktop.ml  dkml_component_offline_desktop_ci.ml  dkml_component_offline_desktop_full.ml  dkml_component_staging_desktop.ml  dune
src/citime/: README.md  bump_source.ml  checksum.sh  copy_installed.ml  dkml_version.ml  dune  gen_global_compile.ml  gen_global_install.ml
src/installtime/: dune  install.ml
src/installtime_enduser/: dune  install.ml  install.mli  main_full.ml
src/installtime_enduser/unix/: dune  unix_install.ml
src/installtime_enduser/windows/: dune  windows_install.ml
src/logic/: caching.ml  dune  model.ml  scripts.ml
src/scripts/: checkout-code.sh  common-values.sh  config-vsstudio.ps1  get-msvcpath.cmd  setup-dkml.sh  teardown-dkml.sh
src/tmpl/: gh-setup-dkml.yml  gl-setup-dkml.gitlab-ci.yml
src/tmpl/gh-darwin/: action.yml
src/tmpl/gh-darwin/pre/: action.yml
src/tmpl/gh-linux/: action.yml
src/tmpl/gh-linux/post/: action.yml
src/tmpl/gh-linux/pre/: action.yml
src/tmpl/gh-windows/: action.yml
src/tmpl/gh-windows/pre/: action.yml
src/tmpl/gl/: setup-dkml.gitlab-ci.yml
src/tmpl/pc/: setup-dkml-darwin_x86_64.sh  setup-dkml-linux_x86.sh  setup-dkml-linux_x86_64.sh  setup-dkml-windows_x86.ps1  setup-dkml-windows_x86_64.ps1
test/gh-darwin/: action.yml  dune
test/gh-darwin/post/: action.yml  dune
test/gh-darwin/pre/: action.yml  dune
test/gh-linux/: action.yml  dune
test/gh-linux/post/: action.yml  dune
test/gh-linux/pre/: action.yml  dune
test/gh-windows/: action.yml  dune
test/gh-windows/post/: action.yml  dune
test/gh-windows/pre/: action.yml  dune
test/gitlab/: dune
test/gl/: dune  setup-dkml.gitlab-ci.yml
test/pc/: dune  setup-dkml-darwin_arm64.sh  setup-dkml-darwin_x86_64.sh  setup-dkml-linux_x86.sh  setup-dkml-linux_x86_64.sh  setup-dkml-windows_x86.ps1  setup-dkml-windows_x86_64.ps1
tmpl/gh-darwin/post/: action.yml
tmpl/gh-darwin/pre/: action.yml
tmpl/gh-linux/post/: action.yml
tmpl/gh-linux/pre/: action.yml
tmpl/gh-windows/post/: action.yml
tmpl/gh-windows/pre/: action.yml
tmpl/gl/: setup-dkml.gitlab-ci.yml
tmpl/pc/: setup-dkml-darwin_arm64.sh  setup-dkml-darwin_x86_64.sh  setup-dkml-linux_x86.sh  setup-dkml-linux_x86_64.sh  setup-dkml-windows_x86.ps1  setup-dkml-windows_x86_64.ps1
