(executable
 (package dkml-build-desktop)
 (name gen_global_install)
 (public_name dkml-desktop-gen-global-install)
 (modules gen_global_install)
 (libraries dkml-runtime-distribution re))

(executable
 (package dkml-build-desktop)
 (name gen_global_compile)
 (public_name dkml-desktop-gen-global-compile)
 (modules gen_global_compile)
 (libraries dkml-runtime-distribution re))

(executable
 (package dkml-build-desktop)
 (name copy_installed)
 (public_name dkml-desktop-copy-installed)
 (modules copy_installed)
 (libraries diskuvbox bos fpath))

(executable
 (package dkml-build-desktop)
 (name dkml_version)
 (public_name dkml-desktop-dkml-version)
 (modules dkml_version)
 (libraries dkml-runtime-distribution))
