(rule
 (target setup-dkml.gen.gitlab-ci.yml)
 (alias runtest)
 (action
  (setenv
   OCAMLRUNPARAM
   b
   (run
    ../../src/gl_setup_dkml_yml.exe
    ; Exclude macOS until you have a https://gitlab.com/gitlab-com/runner-saas-macos-access-requests/-/issues approved
    --exclude-macos
    --output-file
    %{target}))))

(rule
 (alias runtest)
 (action
  (diff setup-dkml.gitlab-ci.yml setup-dkml.gen.gitlab-ci.yml)))
