(executable
 (package dkml-component-staging-desktop)
 (name unix_install)
 (public_name unix_install)
 (modes
  (byte exe))
 (libraries bos))

(install
 (package dkml-component-staging-desktop)
 (section share)
 (files
  (unix_install.bc as staging-files/generic/unix_install.bc)))

(rule
 (alias runtest)
 (deps
  (:bc unix_install.bc))
 (action
  (progn
   (with-stdout-to
    info.txt
    (run ocamlobjinfo %{bc}))
   (with-stdout-to
    dlls.corrected.txt
    (run awk "/.*:/ {x=0} /Used DLLs:/{x=1} x==1 {print}" info.txt))
   (diff? dlls.txt dlls.corrected.txt))))
