(executable
 (package dkml-component-staging-desktop)
 (name windows_install)
 (public_name windows_install)
 (modes
  (byte exe))
 (libraries
  dkml-install.api
  diskuvbox
  bos
  logs.cli
  logs.fmt
  fmt.cli
  fmt.tty
  cmdliner
  ; want bytecode version of digestif ... but it is terribly slow for SHA256.
  ; TODO: let mix of bytecode and native code for install.
  digestif.ocaml
  digestif))

(install
 (package dkml-component-staging-desktop)
 (section share)
 (files
  (windows_install.bc as staging-files/generic/windows_install.bc)))

(rule
 (alias runtest)
 (deps
  (:bc windows_install.bc))
 (action
  (progn
   (with-stdout-to
    info.txt
    (run ocamlobjinfo %{bc}))
   (with-stdout-to
    dlls.corrected.txt
    (run awk "/.*:/ {x=0} /Used DLLs:/{x=1} x==1 {print}" info.txt))
   (diff? dlls.txt dlls.corrected.txt))))
